@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.2-3
-Date: 2023-09-07
+Version: 3.2-3.001
+Date: 2023-09-08
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
