@@ -231,6 +231,7 @@ export("Iest")
 export("image.ssf")
 export("implemented.for.K")
 export("increment.fv")
+export("integral.fv")
 export("integral.ssf")
 export("is.atomicQtest")
 export("is.poisson.exactppm")
@@ -609,6 +610,7 @@ S3method("formula", "fv")
 S3method("harmonise", "fv")
 S3method("harmonize", "fv")
 S3method("image", "ssf")
+S3method("integral", "fv")
   S3method("integral", "ssf")
 S3method("is.poisson", "exactppm")
 S3method("is.stationary", "exactppm")
